# GPT-Watermark-Remover

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
scripts/: build_linux_x86_64.sh  build_windows.sh  package_macos_app.sh
src/: lib.rs  main.rs
